ServerRunner removed